Begin #28, clean paths and set up theme.scss for multiple theme prototypes.

--- a/sass/cosmos/_ncg_cosmos.scss
+++ b/sass/cosmos/_ncg_cosmos.scss
@@ -1,3 +1,8 @@
+//the fonts
+@import "ncg_cosmos_variables";
+@import "../fonts/cosmos/stylesheet.css";
+@import "ncg_hal";
+
 /**
  * Cosmos theme styles
  */
