--- a/theme/style.css
+++ b/theme/style.css
@@ -12,6 +12,6 @@
 
 /**
  * 	Don't add styles here. This is not loaded. It's only here for the wordpress theme page.
- *  Instead, add styles to theme/sass/theme.scss which compiles to /theme/css/theme.css
+ *  Instead, add styles to ../sass/theme.scss which compiles to /theme/css/theme.css
  */
 
