Got php tidy to work.

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -8,4 +8,5 @@
  * Default WordPress stuff.
  */
 @import "wordpress/_layout.scss"; // the most common layout.
+@import "wordpress/_sidebar.scss"; // the most common layout.
 @import "wordpress/_ncg_wordpress.scss";
