--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -286,7 +286,7 @@ th {
     background: #fff !important;
   }
 
-  .navbar {
+  .navbar, .site-header nav {
     display: none;
   }
 
@@ -1961,7 +1961,7 @@ pre code {
   clear: both;
 }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, #secondary, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, #primary, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
@@ -2386,7 +2386,7 @@ pre code {
   }
 }
 @media (min-width: 992px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-md-1, .col-md-2, .col-md-3, #secondary, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, #primary, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
   }
 
@@ -2398,7 +2398,7 @@ pre code {
     width: 16.66667%;
   }
 
-  .col-md-3 {
+  .col-md-3, #secondary {
     width: 25%;
   }
 
@@ -2422,7 +2422,7 @@ pre code {
     width: 66.66667%;
   }
 
-  .col-md-9 {
+  .col-md-9, #primary {
     width: 75%;
   }
 
@@ -4516,21 +4516,21 @@ tbody.collapse.in {
   border-top-left-radius: 0;
 }
 
-.navbar {
+.navbar, .site-header nav {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
-.navbar:before, .navbar:after {
+.navbar:before, .site-header nav:before, .navbar:after, .site-header nav:after {
   content: " ";
   display: table;
 }
-.navbar:after {
+.navbar:after, .site-header nav:after {
   clear: both;
 }
 @media (min-width: 768px) {
-  .navbar {
+  .navbar, .site-header nav {
     border-radius: 4px;
   }
 }
@@ -4667,7 +4667,7 @@ tbody.collapse.in {
   display: block;
 }
 @media (min-width: 768px) {
-  .navbar > .container .navbar-brand, .navbar > .site .navbar-brand, .navbar > .container-fluid .navbar-brand {
+  .navbar > .container .navbar-brand, .site-header nav > .container .navbar-brand, .navbar > .site .navbar-brand, .site-header nav > .site .navbar-brand, .navbar > .container-fluid .navbar-brand, .site-header nav > .container-fluid .navbar-brand {
     margin-left: -15px;
   }
 }
@@ -4879,82 +4879,83 @@ tbody.collapse.in {
     margin-right: 0;
   }
 }
-.navbar-default {
+.navbar-default, .site-header nav {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
-.navbar-default .navbar-brand {
+.navbar-default .navbar-brand, .site-header nav .navbar-brand {
   color: #777777;
 }
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+.navbar-default .navbar-brand:hover, .site-header nav .navbar-brand:hover, .navbar-default .navbar-brand:focus, .site-header nav .navbar-brand:focus {
   color: #5e5e5e;
   background-color: transparent;
 }
-.navbar-default .navbar-text {
+.navbar-default .navbar-text, .site-header nav .navbar-text {
   color: #777777;
 }
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navbar-nav > li > a, .site-header nav .navbar-nav > li > a {
   color: #777777;
 }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+.navbar-default .navbar-nav > li > a:hover, .site-header nav .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .site-header nav .navbar-nav > li > a:focus {
   color: #333333;
   background-color: transparent;
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+.navbar-default .navbar-nav > .active > a, .site-header nav .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .site-header nav .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus, .site-header nav .navbar-nav > .active > a:focus {
   color: #555555;
   background-color: #e7e7e7;
 }
-.navbar-default .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus {
+.navbar-default .navbar-nav > .disabled > a, .site-header nav .navbar-nav > .disabled > a, .navbar-default .navbar-nav > .disabled > a:hover, .site-header nav .navbar-nav > .disabled > a:hover, .navbar-default .navbar-nav > .disabled > a:focus, .site-header nav .navbar-nav > .disabled > a:focus {
   color: #cccccc;
   background-color: transparent;
 }
-.navbar-default .navbar-toggle {
+.navbar-default .navbar-toggle, .site-header nav .navbar-toggle {
   border-color: #dddddd;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+.navbar-default .navbar-toggle:hover, .site-header nav .navbar-toggle:hover, .navbar-default .navbar-toggle:focus, .site-header nav .navbar-toggle:focus {
   background-color: #dddddd;
 }
-.navbar-default .navbar-toggle .icon-bar {
+.navbar-default .navbar-toggle .icon-bar, .site-header nav .navbar-toggle .icon-bar {
   background-color: #888888;
 }
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
+.navbar-default .navbar-collapse, .site-header nav .navbar-collapse,
+.navbar-default .navbar-form,
+.site-header nav .navbar-form {
   border-color: #e7e7e7;
 }
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+.navbar-default .navbar-nav > .open > a, .site-header nav .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .site-header nav .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus, .site-header nav .navbar-nav > .open > a:focus {
   background-color: #e7e7e7;
   color: #555555;
 }
 @media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a, .site-header nav .navbar-nav .open .dropdown-menu > li > a {
     color: #777777;
   }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .site-header nav .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus, .site-header nav .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #333333;
     background-color: transparent;
   }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .site-header nav .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .site-header nav .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus, .site-header nav .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #555555;
     background-color: #e7e7e7;
   }
-  .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+  .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a, .site-header nav .navbar-nav .open .dropdown-menu > .disabled > a, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover, .site-header nav .navbar-nav .open .dropdown-menu > .disabled > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus, .site-header nav .navbar-nav .open .dropdown-menu > .disabled > a:focus {
     color: #cccccc;
     background-color: transparent;
   }
 }
-.navbar-default .navbar-link {
+.navbar-default .navbar-link, .site-header nav .navbar-link {
   color: #777777;
 }
-.navbar-default .navbar-link:hover {
+.navbar-default .navbar-link:hover, .site-header nav .navbar-link:hover {
   color: #333333;
 }
-.navbar-default .btn-link {
+.navbar-default .btn-link, .site-header nav .btn-link {
   color: #777777;
 }
-.navbar-default .btn-link:hover, .navbar-default .btn-link:focus {
+.navbar-default .btn-link:hover, .site-header nav .btn-link:hover, .navbar-default .btn-link:focus, .site-header nav .btn-link:focus {
   color: #333333;
 }
-.navbar-default .btn-link[disabled]:hover, .navbar-default .btn-link[disabled]:focus, fieldset[disabled] .navbar-default .btn-link:hover, fieldset[disabled] .navbar-default .btn-link:focus {
+.navbar-default .btn-link[disabled]:hover, .site-header nav .btn-link[disabled]:hover, .navbar-default .btn-link[disabled]:focus, .site-header nav .btn-link[disabled]:focus, fieldset[disabled] .navbar-default .btn-link:hover, fieldset[disabled] .site-header nav .btn-link:hover, .site-header fieldset[disabled] nav .btn-link:hover, fieldset[disabled] .navbar-default .btn-link:focus, fieldset[disabled] .site-header nav .btn-link:focus, .site-header fieldset[disabled] nav .btn-link:focus {
   color: #cccccc;
 }
 
@@ -7152,6 +7153,18 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
+}
+
+/**
+ * Sidebar basic settings
+ */
+#secondary ul {
+  list-style: none;
+  padding: 0 0 0 10px;
+}
+
+.widget_search {
+  padding: 10px 0 0;
 }
 
 /**
