hacked basic fontpage together

--- a/sass/wordpress/_ncg_wordpress.scss
+++ b/sass/wordpress/_ncg_wordpress.scss
@@ -10,6 +10,9 @@
 .site-header nav {
 	@extend .navbar, .navbar-default;
 }
+.site-header nav.stuck {
+	@extend .navbar, .navbar-inverse;
+}
 
 /**
  * Image styles
