--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -2,11 +2,64 @@
  * Import your theme:
  */
 //@import "cosmos/ncg_cosmos.scss"; // super space theme.
-@import "default/default"; // super default theme
+@import "bandolf/default"; // super default theme
 
 /**
  * Default WordPress stuff.
  */
-@import "wordpress/_layout.scss"; // the most common layout.
+@import "bandolf/_layout.scss"; // the most common layout.
 @import "wordpress/_sidebar.scss"; // the most common layout.
 @import "wordpress/_ncg_wordpress.scss";
+
+/**
+ * Glow effect
+ */
+.text-glow  {
+	text-shadow: 0 0 0 #00FAFF, 0 0 7px #fff, 0 0 0 #00FF2E;
+	transition: text-shadow 1s;
+}
+.text-glow-hover:hover  {
+	text-shadow: -2px -1px 8px #00FAFF, 0 0 10px #fff, 3px 3px 9px #00FF2E;
+	transition: text-shadow 1s;
+}
+
+nav a {
+	font-family: Primus;
+	font-size: 20px;
+	@extend .text-glow-hover;
+	
+}
+
+.navbar-brand a {
+	color: #fff;
+	font-size: 30px;
+	@extend .text-glow;
+}
+
+.widgettitle {
+	font-family: Primus;
+}
+#hero-widgets {
+	.textwidget {
+		@extend .lead;
+	}
+}
+
+#get-started {
+	display: block;
+	text-align: center;
+	color: #33b73b;
+	font-size: 40px;
+	@extend .text-glow, .text-glow-hover;
+}
+#home-widgets, #home-widgets-2 {
+	background: #222;
+}
+#home-widgets-3 {
+	margin-top: 100px;
+	background: rgba(51, 51, 51, 0.36);
+
+}
+
+
+
