--- a/theme/css/theme.css
+++ b/theme/css/theme.css
@@ -2,6 +2,7 @@
  * Import your theme:
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+@import url(../fonts/bandolf/stylesheet.css);
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -1436,7 +1437,7 @@ img {
   vertical-align: middle;
 }
 
-.img-responsive, article img {
+.img-responsive, article img, .textwidget img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -1925,31 +1926,31 @@ pre code {
   overflow-y: scroll;
 }
 
-.container, #hero-widgets, .content-area > section ul, #footer-widgets {
+.container, #hero-widgets, .home .content-area > section ul, body:not(.home) #content, #footer-widgets {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-.container:before, #hero-widgets:before, .content-area > section ul:before, #footer-widgets:before, .container:after, #hero-widgets:after, .content-area > section ul:after, #footer-widgets:after {
+.container:before, #hero-widgets:before, .home .content-area > section ul:before, body:not(.home) #content:before, #footer-widgets:before, .container:after, #hero-widgets:after, .home .content-area > section ul:after, body:not(.home) #content:after, #footer-widgets:after {
   content: " ";
   display: table;
 }
-.container:after, #hero-widgets:after, .content-area > section ul:after, #footer-widgets:after {
+.container:after, #hero-widgets:after, .home .content-area > section ul:after, body:not(.home) #content:after, #footer-widgets:after {
   clear: both;
 }
 @media (min-width: 768px) {
-  .container, #hero-widgets, .content-area > section ul, #footer-widgets {
+  .container, #hero-widgets, .home .content-area > section ul, body:not(.home) #content, #footer-widgets {
     width: 750px;
   }
 }
 @media (min-width: 992px) {
-  .container, #hero-widgets, .content-area > section ul, #footer-widgets {
+  .container, #hero-widgets, .home .content-area > section ul, body:not(.home) #content, #footer-widgets {
     width: 970px;
   }
 }
 @media (min-width: 1200px) {
-  .container, #hero-widgets, .content-area > section ul, #footer-widgets {
+  .container, #hero-widgets, .home .content-area > section ul, body:not(.home) #content, #footer-widgets {
     width: 1170px;
   }
 }
@@ -1968,15 +1969,15 @@ pre code {
   clear: both;
 }
 
-.row, #hero-widgets ul {
+.row, #hero-widgets ul, body:not(.home) #content #main {
   margin-left: -15px;
   margin-right: -15px;
 }
-.row:before, #hero-widgets ul:before, .row:after, #hero-widgets ul:after {
+.row:before, #hero-widgets ul:before, body:not(.home) #content #main:before, .row:after, #hero-widgets ul:after, body:not(.home) #content #main:after {
   content: " ";
   display: table;
 }
-.row:after, #hero-widgets ul:after {
+.row:after, #hero-widgets ul:after, body:not(.home) #content #main:after {
   clear: both;
 }
 
@@ -4619,10 +4620,11 @@ tbody.collapse.in {
   }
 }
 
-.container > .navbar-header, #hero-widgets > .navbar-header, .content-area > section ul > .navbar-header, #footer-widgets > .navbar-header,
+.container > .navbar-header, #hero-widgets > .navbar-header, .home .content-area > section ul > .navbar-header, body:not(.home) #content > .navbar-header, #footer-widgets > .navbar-header,
 .container > .navbar-collapse,
 #hero-widgets > .navbar-collapse,
-.content-area > section ul > .navbar-collapse,
+.home .content-area > section ul > .navbar-collapse,
+body:not(.home) #content > .navbar-collapse,
 #footer-widgets > .navbar-collapse,
 .container-fluid > .navbar-header,
 .container-fluid > .navbar-collapse {
@@ -4630,10 +4632,11 @@ tbody.collapse.in {
   margin-left: -15px;
 }
 @media (min-width: 768px) {
-  .container > .navbar-header, #hero-widgets > .navbar-header, .content-area > section ul > .navbar-header, #footer-widgets > .navbar-header,
+  .container > .navbar-header, #hero-widgets > .navbar-header, .home .content-area > section ul > .navbar-header, body:not(.home) #content > .navbar-header, #footer-widgets > .navbar-header,
   .container > .navbar-collapse,
   #hero-widgets > .navbar-collapse,
-  .content-area > section ul > .navbar-collapse,
+  .home .content-area > section ul > .navbar-collapse,
+  body:not(.home) #content > .navbar-collapse,
   #footer-widgets > .navbar-collapse,
   .container-fluid > .navbar-header,
   .container-fluid > .navbar-collapse {
@@ -4691,7 +4694,7 @@ tbody.collapse.in {
   display: block;
 }
 @media (min-width: 768px) {
-  .navbar > .container .navbar-brand, .site-header nav > .container .navbar-brand, .navbar > #hero-widgets .navbar-brand, .site-header nav > #hero-widgets .navbar-brand, .content-area > section .navbar > ul .navbar-brand, .site-header .content-area > section nav > ul .navbar-brand, .content-area > section .site-header nav > ul .navbar-brand, .navbar > #footer-widgets .navbar-brand, .site-header nav > #footer-widgets .navbar-brand, .navbar > .container-fluid .navbar-brand, .site-header nav > .container-fluid .navbar-brand {
+  .navbar > .container .navbar-brand, .site-header nav > .container .navbar-brand, .navbar > #hero-widgets .navbar-brand, .site-header nav > #hero-widgets .navbar-brand, .home .content-area > section .navbar > ul .navbar-brand, .site-header .home .content-area > section nav > ul .navbar-brand, .home .content-area > section .site-header nav > ul .navbar-brand, body:not(.home) .navbar > #content .navbar-brand, .site-header body:not(.home) nav > #content .navbar-brand, body:not(.home) .site-header nav > #content .navbar-brand, .navbar > #footer-widgets .navbar-brand, .site-header nav > #footer-widgets .navbar-brand, .navbar > .container-fluid .navbar-brand, .site-header nav > .container-fluid .navbar-brand {
     margin-left: -15px;
   }
 }
@@ -5358,17 +5361,17 @@ a.badge:hover, a.badge:focus {
 .jumbotron > hr {
   border-top-color: #d5d5d5;
 }
-.container .jumbotron, #hero-widgets .jumbotron, .content-area > section ul .jumbotron, #footer-widgets .jumbotron, .container-fluid .jumbotron {
+.container .jumbotron, #hero-widgets .jumbotron, .home .content-area > section ul .jumbotron, body:not(.home) #content .jumbotron, #footer-widgets .jumbotron, .container-fluid .jumbotron {
   border-radius: 6px;
 }
-.jumbotron .container, .jumbotron #hero-widgets, .jumbotron .content-area > section ul, .content-area > section .jumbotron ul, .jumbotron #footer-widgets {
+.jumbotron .container, .jumbotron #hero-widgets, .jumbotron .home .content-area > section ul, .home .content-area > section .jumbotron ul, .jumbotron body:not(.home) #content, body:not(.home) .jumbotron #content, .jumbotron #footer-widgets {
   max-width: 100%;
 }
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding: 48px 0;
   }
-  .container .jumbotron, #hero-widgets .jumbotron, .content-area > section ul .jumbotron, #footer-widgets .jumbotron, .container-fluid .jumbotron {
+  .container .jumbotron, #hero-widgets .jumbotron, .home .content-area > section ul .jumbotron, body:not(.home) #content .jumbotron, #footer-widgets .jumbotron, .container-fluid .jumbotron {
     padding-left: 60px;
     padding-right: 60px;
   }
@@ -7182,12 +7185,12 @@ body {
 /**
  * Home layout
  */
-.content-area > section ul {
+.home .content-area > section ul {
   padding: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
-.content-area > section ul li {
+.home .content-area > section ul li {
   list-style: none;
   padding: 60px 15px 60px;
 }
@@ -7270,7 +7273,7 @@ body {
   transition: background 500ms, padding 1s;
 }
 .site-header nav a {
-  font-family: Primus;
+  font-family: primusdemo;
   font-size: 20px;
 }
 
@@ -7289,7 +7292,7 @@ body {
 }
 
 .widgettitle {
-  font-family: Primus;
+  font-family: primusdemo;
 }
 
 #get-started {
@@ -7304,7 +7307,15 @@ body {
 }
 
 #home-widgets-3 {
-  background: rgba(51, 51, 51, 0.8);
+  background: rgba(0, 0, 0, 0.8);
+}
+
+/**
+ * Other pages
+ */
+body:not(.home) #content {
+  background: #efefef;
+  color: #333;
 }
 
 /**
@@ -7313,3 +7324,7 @@ body {
 .widget {
   list-style: none;
 }
+
+/**
+ * Images
+ */
